fixed z-index

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -44,8 +44,8 @@ a:hover { text-decoration:underline; }
 #header { width:100%; height:120px; border-top-style:none; }
 
 #header .headerbg{ width:100%; height:186px; position:absolute;  z-index:-1; top:0; left:0;}
-#header .logo{ position:absolute; z-index:90; margin-top:20px; left:25px;}
-#header .xclogo{ position:absolute; z-index:90; margin-top:5px; right:25px;}
+#header .logo{ position:absolute; margin-top:20px; left:25px;}
+#header .xclogo{ position:absolute;  margin-top:5px; right:25px;}
 #logo_link { display:block;width:240px; height:86px; margin-left:758px; }
 
 #navi { left:0; min-height:66px; top:120px; position:absolute; z-index:50; background-color:#fff; min-height:66px; width:100%; overflow:visible; border-bottom:1px #bbbbbb solid;}
